--- a/custom_components/goodwe/manifest.json
+++ b/custom_components/goodwe/manifest.json
@@ -8,7 +8,7 @@
     "@mletenay",
     "@fizcris"
   ],
-  "requirements": ["goodwe==0.2.4"],
+  "requirements": [],
   "iot_class": "local_polling",
   "version": "1.0.0"
 }
