--- a/packages/geysers_solar.yaml
+++ b/packages/geysers_solar.yaml
@@ -97,13 +97,13 @@ automation:
       - condition: numeric_state
         entity_id: sensor.goodwe_battery_soc
         above: '99'
-      - condition: numeric_state
-        entity_id: sensor.front_bathroom_geyser_power
-        below: '50'
+      #- condition: numeric_state
+      #  entity_id: sensor.front_bathroom_geyser_power
+      #  below: '50'
       # Since we have solar, check forecast then continue
       - condition: numeric_state
         entity_id: sensor.solcast_forecast
-        above: '1'
+        above: '0.75'
       - condition: sun
         before: sunset
         before_offset: -00:30:00
@@ -148,6 +148,9 @@ automation:
       - service: switch.turn_off
         data:
           entity_id: switch.pool_pump
+      - service: timer.finish
+        data_template:
+          entity_id: timer.pool_pump
 
   ## Turn off main geyser when only main geyser on and above 5kW non-essential
   - alias: Turn off main geyser when high kW
